파이썬 3.6으로 변경, pillow 추가

--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,14 @@
 name: deep-learning-with-python
 
 dependencies:
-- python=3.5
+- python
 - scikit-learn
 - scipy
 - numpy
 - matplotlib
 - ipython
 - jupyter
+- pillow
 - pip:
   - tensorflow-gpu
   - keras
